--- a/2023/_posts/2017-01-29-policies.md
+++ b/2023/_posts/2017-01-29-policies.md
@@ -18,7 +18,7 @@ Recitations are held once a week. These sessions are led by pairs of graduate an
 
 Regular attendance is an expectation for all students in the class. As a general rule, "on time" means that you are sitting in the classroom five minutes early.
 
-There will be no exams, quizzes, reports, or research proposals; your final grade is based entirely on [homework]({{ site.baseurl }}/2023/homework). Homework is assigned on Thursdays and is due the following Thursday before class. **Late homework submissions (submitted after 1:00 pm on the date due) will not be accepted without penalty.** For each day an assignment is late, 10% will be deducted from the maximum possible score, beginning immediately after the deadline. For example, if your submission is handed in at 2:00 pm on the Thursday it is due, your maximum possible score is 90%. A submission received four days late will maximally earn 50%. For exceptions, see "Absences, Extensions, and Ditch Day" below.
+There will be no exams, quizzes, reports, or research proposals; your final grade is based entirely on [homework]({{ site.baseurl }}/2023/homework). Homework is assigned on Thursdays and is due the following Thursday at noon. **Late homework submissions (submitted after 12:00 pm on the date due) will not be accepted without penalty.** For each day an assignment is late, 10% will be deducted from the maximum possible score, beginning immediately after the deadline. For example, if your submission is handed in at 2:00 pm on the Thursday it is due, your maximum possible score is 90%. A submission received four days late will maximally earn 50%. For exceptions, see "Absences, Extensions, and Ditch Day" below.
 
 You may use an electronic device (e.g. tablet, laptop) to take notes during class only if you use it for this purpose. We will ask you to turn off your electronic devices (or ask you to leave) if their use is off-topic or distracting to others.
 
@@ -70,4 +70,4 @@ In most cases, emailing your section TA is preferable to emailing a head TA, whi
 
 Homework extensions or absences will only be granted with an adequate reason (e.g. a note from a doctor or dean), and with as much advance notice as possible. Last-minute requests (or requests after the deadline) will generally not be granted.
 
-In the event that Ditch Day falls on the day that an assignment is due, the deadline will be extended by two calendar days (i.e., if Ditch Day is on a Thursday when a problem set is due, then the revised due date will be Saturday at 1:00 pm). Any course meetings affected by Ditch Day will be rescheduled and posted on the [homepage]({{ site.baseurl }}/2023/index).
+In the event that Ditch Day falls on the day that an assignment is due, the deadline will be extended by two calendar days (i.e., if Ditch Day is on a Thursday when a problem set is due, then the revised due date will be Saturday at 12:00 pm). Any course meetings affected by Ditch Day will be rescheduled and posted on the [homepage]({{ site.baseurl }}/2023/index).
