--- a/2023/_posts/2017-01-31-overview.md
+++ b/2023/_posts/2017-01-31-overview.md
@@ -43,10 +43,10 @@ Unless otherwise noted, all meetings will take place in [Chen 100](https://www.c
 | Monday | 4:00pm - 5:00pm | Victor | Hameetman Club Room 2 |
 | Monday | 6:00pm - 7:00pm | Rosalind | Chen 100 |
 | Tuesday | 11:00am - 12:00pm | Makena | Hameetman Club Room 2 |
+| Tuesday | 4:00pm - 5:00pm | Gabby | Chen 130 |
 | Wednesday | 10:00am - 11:00am | Sam | Hameetman Conference Room |
 | Wednesday | 12:00pm - 1:00pm | Matticus | Hameetman Club Room 2 |
 | Wednesday | 1:00pm - 2:00pm | Kian | Chen Breezeway |
-| Wednesday | 2:00pm - 3:00pm | Gabby | Hameetman Conference Room |
 | Wednesday | 3:00pm - 4:00pm | Anna | Kerckhoff 101 |
 | Wednesday | 4:00pm - 5:00pm | Gabe | Chen Breezeway |
 | Wednesday | 6:00pm - 7:00pm | David | Chen Breezeway |
