--- a/2023/_posts/2017-01-25-code.md
+++ b/2023/_posts/2017-01-25-code.md
@@ -36,8 +36,8 @@ There is no live tutorial Week 1. Instead, there are two notebooks for you to re
 
 | Week | Date | Topic | Links |
 | :--: | -- | -- | -- |
-| 2 | Tuesday, April 11 | Intro to Python for image segmentation. | [[example image](https://live.staticflickr.com/1446/25978596875_df948ea1f1_b.jpg)] [[recording](https://drive.google.com/file/d/1MRxs2vY4H7DFom4sts0SoU8tHlZ_PCR1/view)] [[notebook](https://colab.research.google.com/drive/1Ea65EEI9KCu9BptC-vJdRad1JrQynK9I?usp=sharing)] |
-| 3 | Tuesday, April 18 | Computational sequence analysis. | [[sushi samples](http://rpdata.caltech.edu/courses/bi1_2023/data/sushi_samples.txt)] [[fish reference](http://rpdata.caltech.edu/courses/bi1_2023/data/fish_reference.txt)] |
+| 2 | Tuesday, April 11 | Intro to Python for image segmentation. | [[recording](https://drive.google.com/file/d/1MRxs2vY4H7DFom4sts0SoU8tHlZ_PCR1/view)] [[example image](https://live.staticflickr.com/1446/25978596875_df948ea1f1_b.jpg)] [[notebook](https://colab.research.google.com/drive/1Ea65EEI9KCu9BptC-vJdRad1JrQynK9I?usp=sharing)] |
+| 3 | Tuesday, April 18 | Computational sequence analysis. | [[recording](https://drive.google.com/file/d/14HOYEA2-h0w_wYZ7am9pDJB5FZyJX8pS/view?usp=sharing)] [[sushi samples](http://rpdata.caltech.edu/courses/bi1_2023/data/sushi_samples.txt)] [[fish reference](http://rpdata.caltech.edu/courses/bi1_2023/data/fish_reference.txt)] |
 | 4 | Tuesday, April 25 | Dating fossils using radioactive decay. | |
 | 5 | Tuesday, May 2 | Exploring evolution with stochastic simulations. | |
 | 6 | Tuesday, May 9 | tbd | |
