--- a/2023/_posts/2017-01-27-homework.md
+++ b/2023/_posts/2017-01-27-homework.md
@@ -14,9 +14,9 @@ Before submitting an assignment, take a moment to familiarize yourself with the 
 
 **Homework 1** \| *Migrations.* Due April 13th by 1:00 pm. [[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk1_migrations/hw1_migrations_PROBLEMS.pdf)] [[code template](https://colab.research.google.com/drive/1Ehk2WdWPd3pdxADoJWzATHOsOdncAW6J?usp=sharing)] [[image for 3a](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk1_migrations/elephants_3a.jpg)] [[image for 3b](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk1_migrations/elephants_3b.jpg)]
 
-**Homework 2** \| *Biogeography.* Due April 20th by 12:00pm. [[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk2_biogeography/hw2_biogeography_PROBLEMS.pdf)] [[code template](https://colab.research.google.com/drive/11lmLRkptBAO6S09NvbB096zDo19E5TqW?usp=sharing)] [[island frog data](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk2_biogeography/frogs_st.txt)] [[mainland frog data](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk2_biogeography/frogs_africa.txt)] [[video 1](http://rpdata.caltech.edu/courses/bi1_2023/videos/frogs_DNA.mp4)] [[video 2](http://rpdata.caltech.edu/courses/bi1_2023/videos/frogs_dispersal.mp4)]
+**Homework 2** \| *Biogeography.* Due April 20th by 12:00pm. [[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk2_biogeography/hw2_biogeography_PROBLEMS.pdf)] [[code template](https://colab.research.google.com/drive/11lmLRkptBAO6S09NvbB096zDo19E5TqW?usp=sharing)] [[island frog data](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk2_biogeography/frogs_st.txt)] [[mainland frog data](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk2_biogeography/frogs_africa.txt)] [[video: frog DNA](http://rpdata.caltech.edu/courses/bi1_2023/videos/frogs_DNA.mp4)] [[video: frog dispersal](http://rpdata.caltech.edu/courses/bi1_2023/videos/frogs_dispersal.mp4)]
 
-**Homework 3** \| *Evolution.* Due April 27th by 12:00pm.
+**Homework 3** \| *Evolution.* Due April 27th by 12:00pm. [[video: island biogeography recap](http://rpdata.caltech.edu/courses/bi1_2023/videos/island_biogeo.mp4)] [[video: deep time](http://rpdata.caltech.edu/courses/bi1_2023/videos/deep_time.mp4)] [[video: fossils](http://rpdata.caltech.edu/courses/bi1_2023/videos/fossils.mp4)]
 
 **Homework 4** \| *Population Genetics.* Due May 4th by 12:00pm.
 
