--- a/2023/_posts/2017-01-30-schedule.md
+++ b/2023/_posts/2017-01-30-schedule.md
@@ -15,7 +15,7 @@ permalink: /2023/schedule
 | 2 | Tuesday, April 11 | Keystone species and trophic cascades. Robert Paine’s wonderful seastar experiment on a tiny patch of reef in the Pacific Northwest. Otters and the Aleutians. | |
 | 2 | Thursday, April 13 | The species question. The distribution of species in space and time. Island biogeography and the puzzle of amphibians on oceanic islands. | [Homework 2 Released]({{ site.baseurl }}/2023/homework), Homework 1 Due |
 | 3 | Tuesday, April 18 | The whale. On the imperfections of the fossil record. On the perfections of the fossil record. | |
-| 3 | Thursday, April 20 | The whale, part 2. DNA as a document of evolutionary history. The hidden story of whale evolution in DNA. | Homework 3 Released, Homework 2 Due |
+| 3 | Thursday, April 20 | The whale, part 2. DNA as a document of evolutionary history. The hidden story of whale evolution in DNA. | [Homework 3 Released]({{ site.baseurl }}/2023/homework), Homework 2 Due |
 | 4 | Tuesday, April 25 | The ingredients of evolution. Heritable variation. The forces of evolution such as selection and drift. | |
 | 4 | Thursday, April 27 | The evolution of eye color. A population genetic view of eye color evolution, and the surprising reach of the coin flip idea. | Homework 4 Released, Homework 3 Due |
 | 5 | Tuesday, May 2 | What is life? Musings on the secret of life. Life and its entropic destiny. | |
