clarify extension policy

--- a/2023/_posts/2017-01-29-policies.md
+++ b/2023/_posts/2017-01-29-policies.md
@@ -37,7 +37,7 @@ If you are interested in challenging the way your homework was graded, you may r
 - Regrades may be used to resubmit improperly submitted assignments, but the late policy still applies.
 - Regrades are final.
 
-To request a regrade, email Kian with the subject line `[Homework #] Regrade Request`. You may provide a description of any mistakes you feel were made in the body of the email.
+To request a regrade, **email Kian** with the subject line `[Homework #] Regrade Request`. You may provide a description of any mistakes you feel were made in the body of the email.
 
 ## Collaboration Policy and the Honor Code
 
@@ -68,6 +68,6 @@ In most cases, emailing your section TA is preferable to emailing a head TA, whi
 
 ## Absences, Extensions, and Ditch Day
 
-Homework extensions or absences will only be granted with an adequate reason (e.g. a note from a doctor or dean), and with as much advance notice as possible. Last-minute requests (or requests after the deadline) will generally not be granted.
+Homework extensions or absences will only be granted with an adequate reason (e.g. a note from a doctor or dean), and with as much advance notice as possible. Last-minute requests (or requests after the deadline) will generally not be granted. To request an extension, **email Kian** with the subject line `[Homework #] Extension Request`.
 
 In the event that Ditch Day falls on the day that an assignment is due, the deadline will be extended by two calendar days (i.e., if Ditch Day is on a Thursday when a problem set is due, then the revised due date will be Saturday at 12:00 pm). Any course meetings affected by Ditch Day will be rescheduled and posted on the [homepage]({{ site.baseurl }}/2023/index).
