--- a/2023/_posts/2017-01-25-code.md
+++ b/2023/_posts/2017-01-25-code.md
@@ -38,7 +38,7 @@ There is no live tutorial Week 1. Instead, there are two notebooks for you to re
 | :--: | -- | -- | -- |
 | 2 | Tuesday, April 11 | Intro to Python for image segmentation. | [[recording](https://drive.google.com/file/d/1MRxs2vY4H7DFom4sts0SoU8tHlZ_PCR1/view)] [[example image](https://live.staticflickr.com/1446/25978596875_df948ea1f1_b.jpg)] [[notebook](https://colab.research.google.com/drive/1Ea65EEI9KCu9BptC-vJdRad1JrQynK9I?usp=sharing)] |
 | 3 | Tuesday, April 18 | Computational sequence analysis. | [[recording](https://drive.google.com/file/d/14HOYEA2-h0w_wYZ7am9pDJB5FZyJX8pS/view?usp=sharing)] [[sushi samples](http://rpdata.caltech.edu/courses/bi1_2023/data/sushi_samples.txt)] [[fish reference](http://rpdata.caltech.edu/courses/bi1_2023/data/fish_reference.txt)] |
-| 4 | Tuesday, April 25 | Plotting with Python. | |
+| 4 | Tuesday, April 25 | Plotting with Python. | [[recording](https://drive.google.com/file/d/1SuiXNMHiXI__o_bMvmRQDjJc1CRpGrE_/view?usp=sharing)] [[notebook](https://colab.research.google.com/drive/19q0t0MknF1HN1FdZzTDSUXlbqVkCgtea?authuser=1#scrollTo=EJRXLsycq9uo)] |
 | 5 | Tuesday, May 2 | Exploring evolution with stochastic simulations. | |
 | 6 | Tuesday, May 9 | tbd | |
 | 7 | Tuesday, May 16 | tbd | |
