preview of coming attractions

--- a/2023/_posts/2017-01-27-homework.md
+++ b/2023/_posts/2017-01-27-homework.md
@@ -18,7 +18,7 @@ Before submitting an assignment, take a moment to familiarize yourself with the 
 
 **Homework 3** \| *Evolution.* Due April 27th by 12:00pm. [[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk3_deeptime/hw3_deeptime_PROBLEMS.pdf)] [[code template](https://colab.research.google.com/drive/1qkfwXfMWgyejetTpttHH4SuDjZvV4BgT?usp=sharing)] [[video: HW intro](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk3_deeptime/hw3_intro.mp4)] [[video: island biogeography recap](http://rpdata.caltech.edu/courses/bi1_2023/videos/island_biogeo.mp4)] [[video: deep time](http://rpdata.caltech.edu/courses/bi1_2023/videos/deep_time.mp4)] [[video: fossils](http://rpdata.caltech.edu/courses/bi1_2023/videos/fossils.mp4)] [[ggt_beheregaray.fasta](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk3_deeptime/ggt_beheregaray.fasta)] [[ggt_caccone.fasta](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk3_deeptime/ggt_caccone.fasta)]
 
-**Homework 4** \| *Population Genetics.* Due May 4th by 12:00pm. [[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk4_popgen/hwk4_populationGenetics2023_PROBLEMS.pdf)] [[code template]]
+**Homework 4** \| *Population Genetics.* Due May 4th by 12:00pm. [[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk4_popgen/hwk4_populationGenetics2023_PROBLEMS.pdf)] [[code template (coming soon)]] [[video: HW intro] (coming soon)]
 
 **Homework 5** \| *What is Life?* Due May 11th by 12:00pm.
 
