--- a/2023/_posts/2017-01-30-schedule.md
+++ b/2023/_posts/2017-01-30-schedule.md
@@ -17,9 +17,9 @@ permalink: /2023/schedule
 | 3 | Tuesday, April 18 | The whale. On the imperfections of the fossil record. On the perfections of the fossil record. | |
 | 3 | Thursday, April 20 | The whale, part 2. DNA as a document of evolutionary history. The hidden story of whale evolution in DNA. | [Homework 3 Released]({{ site.baseurl }}/2023/homework), Homework 2 Due |
 | 4 | Tuesday, April 25 | The ingredients of evolution. Heritable variation. The forces of evolution such as selection and drift. | |
-| 4 | Thursday, April 27 | The evolution of eye color. A population genetic view of eye color evolution, and the surprising reach of the coin flip idea. | Homework 4 Released, Homework 3 Due |
+| 4 | Thursday, April 27 | The evolution of eye color. A population genetic view of eye color evolution, and the surprising reach of the coin flip idea. | [Homework 4 Released]({{ site.baseurl }}/2023/homework), Homework 3 Due |
 | 5 | Tuesday, May 2 | What is life? Musings on the secret of life. Life and its entropic destiny. | |
-| 5 | Thursday, May 4 | Eating the sun. How living organisms make a living. Biological batteries, with a special emphasis on the proton motive force. | Homework 5 Released, Homework 4 Due |
+| 5 | Thursday, May 4 | Eating the sun. How living organisms make a living. Biological batteries, with a special emphasis on the proton motive force. | [Homework 5 Released]({{ site.baseurl }}/2023/homework), Homework 4 Due* |
 | 6 | Tuesday, May 9 | Turning sugar into a cell. Big data and the proteome. The proteome by pure thought. A first look at gene regulation. | |
 | 6 | Thursday, May 11 | An interlude on probability as the language of reason, and the language of biology. Boltzmann, statistical mechanics, and binding. Gene regulation continued. | Homework 6 Released, Homework 5 Due |
 | 7 | Tuesday, May 16 | Blood. The complete blood count test. The many cell types of the blood. Becoming a blood cell. | |
