--- a/2023/_posts/2017-01-29-policies.md
+++ b/2023/_posts/2017-01-29-policies.md
@@ -16,7 +16,7 @@ Recitations are held once a week. These sessions are led by pairs of graduate an
 
 ## Attendance, Grading, and Electronic Devices
 
-Regular attendance is an expectation for all students in the class. As a general rule, "on time" means that you are sitting in the classroom five minutes early.
+Regular attendance is an expectation for all students in the class. There is no textbook, so you will likely find it difficult to stay on top of the material otherwise. As a general rule, "on time" means that you are sitting in the classroom five minutes early.
 
 There will be no exams, quizzes, reports, or research proposals; your final grade is based entirely on [homework]({{ site.baseurl }}/2023/homework). Homework is assigned on Thursdays and is due the following Thursday at noon. **Late homework submissions (submitted after 12:00 pm on the date due) will not be accepted without penalty.** For each day an assignment is late, 10% will be deducted from the maximum possible score, beginning immediately after the deadline. For example, if your submission is handed in at 2:00 pm on the Thursday it is due, your maximum possible score is 90%. A submission received four days late will maximally earn 50%. For exceptions, see "Absences, Extensions, and Ditch Day" below.
 
@@ -34,10 +34,11 @@ To ensure proper grading, all homework must be submitted in adherence to the fol
 
 If you are interested in challenging the way your homework was graded, you may request a regrade. Regrades are subject to the following conditions:
 - Each regrade request applies to one assignment. In other words, if you ask for a regrade, the entire homework will be subjected to the same high level of scrutiny you have requested for the problem you feel was not graded properly. Keep in mind that this could result in a net reduction in your grade on that particular assignment.
-- Regrades may be used to resubmit improperly submitted assignments, but the late policy still applies.
 - Regrades are final.
 
-To request a regrade, **email Kian** with the subject line `[Homework #] Regrade Request`. You may provide a description of any mistakes you feel were made in the body of the email.
+To request a regrade:
+- For solutions submitted to Gradescope, please use the platform's built-in regrade feature.
+- For solutions submitted to Canvas, **email Kian** with the subject line `[Homework #] Regrade Request`. You may provide a description of any mistakes you feel were made in the body of the email.
 
 ## Collaboration Policy and the Honor Code
 
