--- a/2023/_posts/2017-01-27-homework.md
+++ b/2023/_posts/2017-01-27-homework.md
@@ -20,7 +20,7 @@ Before submitting an assignment, take a moment to familiarize yourself with the 
 
 **Homework 4** \| *Population Genetics.* Due **May 6th by 12:30pm.** [[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk4_popgen/hwk4_populationGenetics2023_PROBLEMS.pdf)] [[code template](https://colab.research.google.com/drive/1T0LKSH2DK-ybWtXUVQoeMqTU3R5PmaC3?usp=sharing)]
 
-**Homework 5** \| *What is Life?* Due May 11th by 12:00pm.
+**Homework 5** \| *What is Life?* Due May 11th by 12:00pm. [[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk5_life/hw5_buildcell_PROBLEMS.pdf)]
 
 **Homework 6** \| *Gene Expression I: Theory.* Due May 18th by 12:00pm.
 
