--- a/2023/_posts/2017-01-30-schedule.md
+++ b/2023/_posts/2017-01-30-schedule.md
@@ -21,9 +21,9 @@ permalink: /2023/schedule
 | 5 | Tuesday, May 2 | What is life? Musings on the secret of life. Life and its entropic destiny. | |
 | 5 | Thursday, May 4 | Eating the sun. How living organisms make a living. Biological batteries, with a special emphasis on the proton motive force. | [Homework 5 Released]({{ site.baseurl }}/2023/homework), Homework 4 Due* |
 | 6 | Tuesday, May 9 | Turning sugar into a cell. Big data and the proteome. The proteome by pure thought. A first look at gene regulation. | |
-| 6 | Thursday, May 11 | An interlude on probability as the language of reason, and the language of biology. Boltzmann, statistical mechanics, and binding. Gene regulation continued. | Homework 6 Released, Homework 5 Due |
+| 6 | Thursday, May 11 | An interlude on probability as the language of reason, and the language of biology. Boltzmann, statistical mechanics, and binding. Gene regulation continued. | Homework 6 + 7 Released, Homework 5 Due |
 | 7 | Tuesday, May 16 | Blood. The complete blood count test. The many cell types of the blood. Becoming a blood cell. | |
-| 7 | Thursday, May 18 | Blood, part 2. Myoglobin, hemoglobin — great molecular celebrities of modern science. | Homework 7 Released, Homework 6 Due |
+| 7 | Thursday, May 18 | Blood, part 2. Myoglobin, hemoglobin — great molecular celebrities of modern science. | Homework 6 Due |
 | 8 | Tuesday, May 23 | The crazy world of single-celled eukaryotes. From toxoplasma to _Chlamydomonas_. A most beautiful experiment! Size control in biology, with special reference to the flagellum. | |
 | 8 | Thursday, May 25 | Locomotion of snakes, worms, and lizards. Taming the gait. Geometric phases. | Homework 8 Released, Homework 7 Due |
 | 9 | Tuesday, May 30 | The cow. Global biodiversity. Land use. How cows work. | |
