--- a/2023/_posts/2017-01-31-overview.md
+++ b/2023/_posts/2017-01-31-overview.md
@@ -46,7 +46,7 @@ Unless otherwise noted, all meetings will take place in [Chen 100](https://www.c
 | Tuesday | 4:00pm - 5:00pm | Gabby | Chen 130 |
 | Wednesday | 10:00am - 11:00am | Sam | Hameetman Conference Room |
 | Wednesday | 12:00pm - 1:00pm | Matticus | Hameetman Club Room 2 |
-| Wednesday | 1:00pm - 2:00pm | Kian | Chen Breezeway |
+| Wednesday | 1:00pm - 2:00pm | Kian | Broad 156 |
 | Wednesday | 3:00pm - 4:00pm | Anna | Kerckhoff 101 |
 | Wednesday | 4:00pm - 5:00pm | Gabe | Chen Breezeway |
 | Wednesday | 6:00pm - 7:00pm | David | Chen Breezeway |
