--- a/2023/_posts/2017-01-25-code.md
+++ b/2023/_posts/2017-01-25-code.md
@@ -40,7 +40,7 @@ There is no live tutorial Week 1. Instead, there are two notebooks for you to re
 | 3 | Tuesday, April 18 | Computational sequence analysis. | [[recording](https://drive.google.com/file/d/14HOYEA2-h0w_wYZ7am9pDJB5FZyJX8pS/view?usp=sharing)] [[sushi samples](http://rpdata.caltech.edu/courses/bi1_2023/data/sushi_samples.txt)] [[fish reference](http://rpdata.caltech.edu/courses/bi1_2023/data/fish_reference.txt)] |
 | 4 | Tuesday, April 25 | Plotting with Python. | [[recording](https://drive.google.com/file/d/1SuiXNMHiXI__o_bMvmRQDjJc1CRpGrE_/view?usp=sharing)] [[notebook](https://colab.research.google.com/drive/19q0t0MknF1HN1FdZzTDSUXlbqVkCgtea?authuser=1#scrollTo=EJRXLsycq9uo)] |
 | 5 | Tuesday, May 2 | Exploring evolution with stochastic simulations. | [[recording](https://drive.google.com/file/d/1oGbFQ1BheY5EqqiLs1-sM6itKM-P08rp/view?usp=share_link)] [[notebook](https://colab.research.google.com/drive/1EPsGcLdgUN5gU0RADpBpujzOsA-0JNYJ?usp=sharing)] |
-| 6 | Tuesday, May 9 | Gene expression I: exploring our dataset. | |
+| 6 | Tuesday, May 9 | Gene expression I: exploring our dataset. | [[recording](https://drive.google.com/file/d/1FTsZTOHFcRnJYckvIw1gAO36oxZv8G9B/view)] [[notebook](https://colab.research.google.com/drive/1mcZpIBcTk3sauePHgycokL9DgeRudXPk?authuser=2)] |
 | 7 | Tuesday, May 16 | Gene expression II: performing our analysis. | |
 | 8 | Tuesday, May 23 | Gene expression III: theory-experiment dialogue. | |
 | 9 | Tuesday, May 30 | tbd | |
