update maggie OH, tutorial 6-7

--- a/2023/_posts/2017-01-31-overview.md
+++ b/2023/_posts/2017-01-31-overview.md
@@ -51,4 +51,4 @@ Unless otherwise noted, all meetings will take place in [Chen 100](https://www.c
 | Wednesday | 4:00pm - 5:00pm | Gabe | Chen Breezeway |
 | Wednesday | 6:00pm - 7:00pm | David | Chen Breezeway |
 | Friday | 9:00am - 10:00am | Maria | Chen Breezeway |
-| Friday | 4:00pm - 5:00pm | Maggie | Chen Breezeway |
+| Friday | 4:00pm - 5:00pm | Maggie | Chen 322 |
