--- a/2023/_posts/2017-01-25-code.md
+++ b/2023/_posts/2017-01-25-code.md
@@ -41,7 +41,7 @@ There is no live tutorial Week 1. Instead, there are two notebooks for you to re
 | 4 | Tuesday, April 25 | Plotting with Python. | [[recording](https://drive.google.com/file/d/1SuiXNMHiXI__o_bMvmRQDjJc1CRpGrE_/view?usp=sharing)] [[notebook](https://colab.research.google.com/drive/19q0t0MknF1HN1FdZzTDSUXlbqVkCgtea?authuser=1#scrollTo=EJRXLsycq9uo)] |
 | 5 | Tuesday, May 2 | Exploring evolution with stochastic simulations. | [[recording](https://drive.google.com/file/d/1oGbFQ1BheY5EqqiLs1-sM6itKM-P08rp/view?usp=share_link)] [[notebook](https://colab.research.google.com/drive/1EPsGcLdgUN5gU0RADpBpujzOsA-0JNYJ?usp=sharing)] |
 | 6 | Tuesday, May 9 | Gene expression I: exploring our dataset. | [[recording](https://drive.google.com/file/d/1FTsZTOHFcRnJYckvIw1gAO36oxZv8G9B/view)] [[notebook](https://colab.research.google.com/drive/1mcZpIBcTk3sauePHgycokL9DgeRudXPk?usp=sharing)] |
-| 7 | Tuesday, May 16 | Gene expression II: performing our analysis. | [[recording](https://drive.google.com/file/d/121A6sB3omgLug2wsLhsXM4k8mfJ3OAyu/view?usp=share_link)] |
+| 7 | Tuesday, May 16 | Gene expression II: performing our analysis. | [[recording](https://drive.google.com/file/d/121A6sB3omgLug2wsLhsXM4k8mfJ3OAyu/view?usp=share_link)] [[notebook](https://colab.research.google.com/drive/1hILheVUHnhjc5hD07tj4uxwqHWnR7B9B?usp=sharing)] |
 | 8 | Tuesday, May 23 | Gene expression III: theory-experiment dialogue. | |
 | 9 | Tuesday, May 30 | tbd | |
 | 10 | Tuesday, June 6 | tbd | |
