tentative movie night

--- a/2023/_posts/2017-01-25-code.md
+++ b/2023/_posts/2017-01-25-code.md
@@ -43,7 +43,7 @@ There is no live tutorial Week 1. Instead, there are two notebooks for you to re
 | 6 | Tuesday, May 9 | Gene expression I: exploring our dataset. | [[recording](https://drive.google.com/file/d/1FTsZTOHFcRnJYckvIw1gAO36oxZv8G9B/view)] [[notebook](https://colab.research.google.com/drive/1mcZpIBcTk3sauePHgycokL9DgeRudXPk?usp=sharing)] |
 | 7 | Tuesday, May 16 | Gene expression II: performing our analysis. | [[recording](https://drive.google.com/file/d/121A6sB3omgLug2wsLhsXM4k8mfJ3OAyu/view?usp=share_link)] [[notebook](https://colab.research.google.com/drive/1hILheVUHnhjc5hD07tj4uxwqHWnR7B9B?usp=sharing)] |
 | 8 | Tuesday, May 23 | Gene expression III: theory-experiment dialogue. | |
-| 9 | Tuesday, May 30 | tbd | |
+| 9 | Tuesday, May 30 | Movie night: _The Serengeti Rules_ | |
 | 10 | Tuesday, June 6 | tbd | |
 
 ## External Resources
