remove trailing paren

--- a/2023/_posts/2017-01-27-homework.md
+++ b/2023/_posts/2017-01-27-homework.md
@@ -24,7 +24,7 @@ Before submitting an assignment, take a moment to familiarize yourself with the 
 
 **Homework 6** \| *Gene Expression I: Theory.* Due May 18th by 11:59pm. [[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk6_thermo/hw6_thermo_PROBLEMS.pdf)] [[RNAP_matrix.txt](http://rpdata.caltech.edu/courses/bi1_2023/data/RNAP_matrix.txt)]
 
-**Homework 7** \| *Gene Expression II: Experiment.* Due May 25th by 11:59pm. This "computational project" is the same length as a typical problem set, but it will be released alongside HW 6, giving you an extra week to work on it. [[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk7_exp/hw7_project_PROBLEMS.pdf)] [[code template](https://colab.research.google.com/drive/1n6R_77-bu9aKVO4Y6ZSOzdwSBOJJB36y?usp=sharing)] [[image dataset](http://rpdata.caltech.edu/courses/bi1_2023/data/lacI_titration.zip)] [[lacZ_titration_data.csv](http://rpdata.caltech.edu/courses/bi1_2023/data/lacZ_titration_data.csv))]
+**Homework 7** \| *Gene Expression II: Experiment.* Due May 25th by 11:59pm. This "computational project" is the same length as a typical problem set, but it will be released alongside HW 6, giving you an extra week to work on it. [[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk7_exp/hw7_project_PROBLEMS.pdf)] [[code template](https://colab.research.google.com/drive/1n6R_77-bu9aKVO4Y6ZSOzdwSBOJJB36y?usp=sharing)] [[image dataset](http://rpdata.caltech.edu/courses/bi1_2023/data/lacI_titration.zip)] [[lacZ_titration_data.csv](http://rpdata.caltech.edu/courses/bi1_2023/data/lacZ_titration_data.csv)]
 
 **Homework 8** \| *Size Control.* Due June 1st by 11:59pm.
 
