--- a/2023/_posts/2017-01-27-homework.md
+++ b/2023/_posts/2017-01-27-homework.md
@@ -26,6 +26,6 @@ Before submitting an assignment, take a moment to familiarize yourself with the 
 
 **Homework 7** \| *Gene Expression II: Experiment.* Due May 25th by 11:59pm. This "computational project" is the same length as a typical problem set, but it will be released alongside HW 6, giving you an extra week to work on it. [[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk7_exp/hw7_project_PROBLEMS.pdf)] [[code template](https://colab.research.google.com/drive/1n6R_77-bu9aKVO4Y6ZSOzdwSBOJJB36y?usp=sharing)] [[image dataset](http://rpdata.caltech.edu/courses/bi1_2023/data/lacI_titration.zip)] [[lacZ_titration_data.csv](http://rpdata.caltech.edu/courses/bi1_2023/data/lacZ_titration_data.csv)]
 
-**Homework 8** \| *Size Control.* Due June 1st by 11:59pm.
+**Homework 8** \| *Size Control.* Due June 1st by 11:59pm. [[problem set](https://www.dropbox.com/s/jmsyiajiaqz66mu/wk8_sizeControl_PROBLEMS.pdf?dl=0)] [[code template](https://colab.research.google.com/drive/1Vx-K-dht4U5Wj7uIEb6cku83-vihHh6G?usp=sharing)]
 
 **Homework 9** \| *Human Impacts.* Due June 8th by 11:59pm.
