--- a/2023/_posts/2017-01-25-code.md
+++ b/2023/_posts/2017-01-25-code.md
@@ -43,7 +43,7 @@ There is no live tutorial Week 1. Instead, there are two notebooks for you to re
 | 6 | Tuesday, May 9 | Gene expression I: exploring our dataset. | [[recording](https://drive.google.com/file/d/1FTsZTOHFcRnJYckvIw1gAO36oxZv8G9B/view)] [[notebook](https://colab.research.google.com/drive/1mcZpIBcTk3sauePHgycokL9DgeRudXPk?usp=sharing)] |
 | 7 | Tuesday, May 16 | Gene expression II: performing our analysis. | [[recording](https://drive.google.com/file/d/121A6sB3omgLug2wsLhsXM4k8mfJ3OAyu/view?usp=share_link)] [[notebook](https://colab.research.google.com/drive/1hILheVUHnhjc5hD07tj4uxwqHWnR7B9B?usp=sharing)] |
 | 8 | Tuesday, May 23 | Gene expression III: theory-experiment dialogue. | [[recording](https://drive.google.com/file/d/1rC3SDPZ_k8EDlXjlWHcSlEqTpao5BY5X/view?usp=sharing)] [[notebook](https://colab.research.google.com/drive/1g-P_R29MEsi8sCtB4x0XS0-dC39efk2n?usp=sharing)] |
-| 9 | Tuesday, May 30 | Pizza & movie night: _The Serengeti Rules_ | |
+| 9 | Tuesday, May 30 | Pizza & movie night: _The Serengeti Rules_ | [[notebook](https://colab.research.google.com/drive/18_5KBGCKU45tXYz0wDq8c0U_ahUvR3S6?usp=sharing)] |
 | 10 | Tuesday, June 6 | tbd | |
 
 ## External Resources
