hw9 and schedule updates

--- a/2023/_posts/2017-01-27-homework.md
+++ b/2023/_posts/2017-01-27-homework.md
@@ -28,4 +28,4 @@ Before submitting an assignment, take a moment to familiarize yourself with the 
 
 **Homework 8** \| *Size Control.* Due June 1st by 11:59pm. [[problem set](https://www.dropbox.com/s/jmsyiajiaqz66mu/wk8_sizeControl_PROBLEMS.pdf?dl=0)] [[code template](https://colab.research.google.com/drive/1Vx-K-dht4U5Wj7uIEb6cku83-vihHh6G?usp=sharing)]
 
-**Homework 9** \| *Human Impacts.* Due June 8th by 11:59pm.
+**Homework 9** \| *Estimates.* Due June 8th by 11:59pm. **Optional for seniors.** [[problem set](https://drive.google.com/file/d/1_jH0oFBQtQU1tDuxrUx2gotbG1kluzKC/view?usp=sharing)]
