add terborgh lecture to schedule

--- a/2023/_posts/2017-01-30-schedule.md
+++ b/2023/_posts/2017-01-30-schedule.md
@@ -26,7 +26,7 @@ permalink: /2023/schedule
 | 7 | Thursday, May 18 | Blood, part 2. Myoglobin, hemoglobin — great molecular celebrities of modern science. | Homework 6 Due |
 | 8 | Tuesday, May 23 | The crazy world of single-celled eukaryotes. From toxoplasma to _Chlamydomonas_. A most beautiful experiment! Size control in biology, with special reference to the flagellum. | |
 | 8 | Thursday, May 25 | Locomotion of snakes, worms, and lizards. Taming the gait. Geometric phases. | [Homework 8 Released]({{ site.baseurl }}/2023/homework), Homework 7 Due |
-| 9 | Tuesday, May 30 | The cow. Global biodiversity. Land use. How cows work. | |
-| 9 | Thursday, June 1 | Human impacts. What are the facts? Why are the facts? | [Homework 9 Released]({{ site.baseurl }}/2023/homework), Homework 8 Due |
+| 9 | Tuesday, May 30 | Human impacts. Global biodiversity. Land use. How cows work. | |
+| 9 | Thursday, June 1 | Guest lecture by Prof. [John Terborgh](https://en.wikipedia.org/wiki/John_Terborgh). | [Homework 9 Released]({{ site.baseurl }}/2023/homework), Homework 8 Due |
 | 10 | Tuesday, June 6 | Summary of our adventure. The place of life in the universe. The place of biology in science. The place of curiosity and joy in our lives. | |
 | 10 | Thursday, June 8 | No lecture. | Homework 9 Due |
