cleanup solutions ahead of 2024

--- a/2023/_posts/2017-01-27-homework.md
+++ b/2023/_posts/2017-01-27-homework.md
@@ -12,20 +12,50 @@ Before submitting an assignment, take a moment to familiarize yourself with the 
  
 ## Assignments
 
-**Homework 1** \| *Migrations.* Due April 13th by 1:00 pm. [[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk1_migrations/hw1_migrations_PROBLEMS.pdf)] [[code template](https://colab.research.google.com/drive/1Ehk2WdWPd3pdxADoJWzATHOsOdncAW6J?usp=sharing)] [[image for 3a](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk1_migrations/elephants_3a.jpg)] [[image for 3b](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk1_migrations/elephants_3b.jpg)] | [[written solutions](https://drive.google.com/file/d/1xetjZaXb819u0oR-vlALNyx8glINDQYn/view?usp=share_link)] [[code solutions](https://drive.google.com/file/d/13OOrJqmYmaN4WaJwHN6-GsJSOMVBb5SS/view?usp=sharing)]
+**Homework 1** \| *Migrations.* Due April 13th by 1:00 pm.
+[[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk1_migrations/hw1_migrations_PROBLEMS.pdf)]
+[[code template](https://colab.research.google.com/drive/1Ehk2WdWPd3pdxADoJWzATHOsOdncAW6J?usp=sharing)]
+[[image for 3a](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk1_migrations/elephants_3a.jpg)]
+[[image for 3b](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk1_migrations/elephants_3b.jpg)]
 
-**Homework 2** \| *Biogeography.* Due April 20th by 12:00pm. [[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk2_biogeography/hw2_biogeography_PROBLEMS.pdf)] [[code template](https://colab.research.google.com/drive/11lmLRkptBAO6S09NvbB096zDo19E5TqW?usp=sharing)] [[island frog data](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk2_biogeography/frogs_st.txt)] [[mainland frog data](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk2_biogeography/frogs_africa.txt)] [[video: frog DNA](http://rpdata.caltech.edu/courses/bi1_2023/videos/frogs_DNA.mp4)] [[video: frog dispersal](http://rpdata.caltech.edu/courses/bi1_2023/videos/frogs_dispersal.mp4)] | [[written solutions](https://drive.google.com/file/d/17pvL5px4ucjnRPThc5WkgQo9BFYyqtvx/view?usp=sharing)] [[code solutions](https://drive.google.com/file/d/1saQ4u1TUutkPi-2T7grBDRyHwOzy-lnw/view?usp=sharing)]
+**Homework 2** \| *Biogeography.* Due April 20th by 12:00pm.
+[[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk2_biogeography/hw2_biogeography_PROBLEMS.pdf)]
+[[code template](https://colab.research.google.com/drive/11lmLRkptBAO6S09NvbB096zDo19E5TqW?usp=sharing)]
+[[island frog data](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk2_biogeography/frogs_st.txt)]
+[[mainland frog data](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk2_biogeography/frogs_africa.txt)]
+[[video: frog DNA](http://rpdata.caltech.edu/courses/bi1_2023/videos/frogs_DNA.mp4)]
+[[video: frog dispersal](http://rpdata.caltech.edu/courses/bi1_2023/videos/frogs_dispersal.mp4)]
 
-**Homework 3** \| *Evolution.* Due April 27th by 12:00pm. [[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk3_deeptime/hw3_deeptime_PROBLEMS.pdf)] [[code template](https://colab.research.google.com/drive/1qkfwXfMWgyejetTpttHH4SuDjZvV4BgT?usp=sharing)] [[video: HW intro](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk3_deeptime/hw3_intro.mp4)] [[video: island biogeography recap](http://rpdata.caltech.edu/courses/bi1_2023/videos/island_biogeo.mp4)] [[video: deep time](http://rpdata.caltech.edu/courses/bi1_2023/videos/deep_time.mp4)] [[video: fossils](http://rpdata.caltech.edu/courses/bi1_2023/videos/fossils.mp4)] [[ggt_beheregaray.fasta](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk3_deeptime/ggt_beheregaray.fasta)] [[ggt_caccone.fasta](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk3_deeptime/ggt_caccone.fasta)]
+**Homework 3** \| *Evolution.* Due April 27th by 12:00pm.
+[[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk3_deeptime/hw3_deeptime_PROBLEMS.pdf)]
+[[code template](https://colab.research.google.com/drive/1qkfwXfMWgyejetTpttHH4SuDjZvV4BgT?usp=sharing)]
+[[video: HW intro](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk3_deeptime/hw3_intro.mp4)]
+[[video: island biogeography recap](http://rpdata.caltech.edu/courses/bi1_2023/videos/island_biogeo.mp4)]
+[[video: deep time](http://rpdata.caltech.edu/courses/bi1_2023/videos/deep_time.mp4)] 
+[[video: fossils](http://rpdata.caltech.edu/courses/bi1_2023/videos/fossils.mp4)] 
+[[ggt_beheregaray.fasta](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk3_deeptime/ggt_beheregaray.fasta)]
+[[ggt_caccone.fasta](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk3_deeptime/ggt_caccone.fasta)]
 
-**Homework 4** \| *Population Genetics.* Due **May 6th by 12:30pm.** [[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk4_popgen/hwk4_populationGenetics2023_PROBLEMS.pdf)] [[code template](https://colab.research.google.com/drive/1T0LKSH2DK-ybWtXUVQoeMqTU3R5PmaC3?usp=sharing)]
+**Homework 4** \| *Population Genetics.* Due **May 6th by 12:30pm.** 
+[[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk4_popgen/hwk4_populationGenetics2023_PROBLEMS.pdf)]
+[[code template](https://colab.research.google.com/drive/1T0LKSH2DK-ybWtXUVQoeMqTU3R5PmaC3?usp=sharing)]
 
-**Homework 5** \| *What is Life?* Due May 11th by 11:59pm. [[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk5_life/hw5_buildcell_PROBLEMS.pdf)]
+**Homework 5** \| *What is Life?* Due May 11th by 11:59pm.
+[[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk5_life/hw5_buildcell_PROBLEMS.pdf)]
 
-**Homework 6** \| *Gene Expression I: Theory.* Due May 18th by 11:59pm. [[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk6_thermo/hw6_thermo_PROBLEMS.pdf)] [[RNAP_matrix.txt](http://rpdata.caltech.edu/courses/bi1_2023/data/RNAP_matrix.txt)]
+**Homework 6** \| *Gene Expression I: Theory.* Due May 18th by 11:59pm.
+[[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk6_thermo/hw6_thermo_PROBLEMS.pdf)]
+[[RNAP_matrix.txt](http://rpdata.caltech.edu/courses/bi1_2023/data/RNAP_matrix.txt)]
 
-**Homework 7** \| *Gene Expression II: Experiment.* Due May 25th by 11:59pm. This "computational project" is the same length as a typical problem set, but it will be released alongside HW 6, giving you an extra week to work on it. [[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk7_exp/hw7_project_PROBLEMS.pdf)] [[code template](https://colab.research.google.com/drive/1n6R_77-bu9aKVO4Y6ZSOzdwSBOJJB36y?usp=sharing)] [[image dataset](http://rpdata.caltech.edu/courses/bi1_2023/data/lacI_titration.zip)] [[lacZ_titration_data.csv](http://rpdata.caltech.edu/courses/bi1_2023/data/lacZ_titration_data.csv)]
+**Homework 7** \| *Gene Expression II: Experiment.* Due May 25th by 11:59pm. This "computational project" is the same length as a typical problem set, but it will be released alongside HW 6, giving you an extra week to work on it.
+[[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/wk7_exp/hw7_project_PROBLEMS.pdf)]
+[[code template](https://colab.research.google.com/drive/1n6R_77-bu9aKVO4Y6ZSOzdwSBOJJB36y?usp=sharing)]
+[[image dataset](http://rpdata.caltech.edu/courses/bi1_2023/data/lacI_titration.zip)] 
+[[lacZ_titration_data.csv](http://rpdata.caltech.edu/courses/bi1_2023/data/lacZ_titration_data.csv)]
 
-**Homework 8** \| *Size Control.* Due June 1st by 11:59pm. [[problem set](https://www.dropbox.com/s/jmsyiajiaqz66mu/wk8_sizeControl_PROBLEMS.pdf?dl=0)] [[code template](https://colab.research.google.com/drive/1Vx-K-dht4U5Wj7uIEb6cku83-vihHh6G?usp=sharing)]
+**Homework 8** \| *Size Control.* Due June 1st by 11:59pm.
+[[problem set](https://www.dropbox.com/s/jmsyiajiaqz66mu/wk8_sizeControl_PROBLEMS.pdf?dl=0)]
+[[code template](https://colab.research.google.com/drive/1Vx-K-dht4U5Wj7uIEb6cku83-vihHh6G?usp=sharing)]
 
-**Homework 9** \| *Estimates.* Due June 8th by 11:59pm. **Optional for seniors.** [[problem set](https://drive.google.com/file/d/1_jH0oFBQtQU1tDuxrUx2gotbG1kluzKC/view?usp=sharing)]
+**Homework 9** \| *Estimates.* Due June 8th by 11:59pm. **Optional for seniors.** 
+[[problem set](https://drive.google.com/file/d/1_jH0oFBQtQU1tDuxrUx2gotbG1kluzKC/view?usp=sharing)]
